# api/docs/swagger.json
@@ -789,46 +789,6 @@
                     }
                 }
             }
-        },
-        "/streams/{code}/status": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "streams"
-                ],
-                "summary": "Stream status",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Stream code",
-                        "name": "code",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/apidocs.StreamStatusData"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/apidocs.ErrorBody"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/apidocs.ErrorBody"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -1154,15 +1114,6 @@
             "properties": {
                 "active_input_priority": {
                     "type": "integer"
-                }
-            }
-        },
-        "apidocs.StreamStatusData": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "object",
-                    "additionalProperties": {}
                 }
             }
         },
